Fixed navbar collapse item stacking issue. centered bottom row on team page

--- a/styles/main.css
+++ b/styles/main.css
@@ -247,3 +247,10 @@ body{
 .nav-collapse2 {
   background-color: #f6f6f7;
 }
+
+@media only screen and (max-width: 768px) {
+    .logo {
+        margin-top: 7px;
+        max-width: 90%;
+    }
+}
